[gd_scene load_steps=2 format=3 uid="uid://c8q5p0tg4j6y1"]

[ext_resource type="Script" path="res://Scripts/tower_upgrade_ui.gd" id="1_u4p2r"]

[node name="TowerUpgradeUI" type="Panel"]
custom_minimum_size = Vector2(200, 300)
offset_left = 945.0
offset_top = 340.0
offset_right = 1145.0
offset_bottom = 640.0
script = ExtResource("1_u4p2r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TowerName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Basic Tower"
horizontal_alignment = 1

[node name="Level" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level: 1"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Damage" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
text = "Damage: 10"

[node name="AttackSpeed" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
text = "Attack Speed: 1.0"

[node name="Range" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
text = "Range: 5.0"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade (100 gold)"

[node name="SellButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sell (50 gold)"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"
